--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
+    "insights-js": "^1.2.11",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-icon-packs": "^1.1.3",
