--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@types/marked": "^4.0.3",
+    "@types/sanitize-html": "^2.6.2",
     "core-js": "^3.19.3",
+    "marked": "^4.0.18",
     "nuxt": "^2.15.8",
+    "raw-loader": "^4.0.2",
+    "sanitize-html": "^2.7.0",
     "vue": "^2.6.14",
     "vue-icon-packs": "^1.1.3",
     "vue-server-renderer": "^2.6.14",
