--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@prisma/client": "4.0.0",
     "@types/marked": "^4.0.3",
     "@types/sanitize-html": "^2.6.2",
     "core-js": "^3.19.3",
+    "express": "^4.18.1",
     "marked": "^4.0.18",
     "nuxt": "^2.15.8",
+    "prisma": "^4.0.0",
     "raw-loader": "^4.0.2",
     "sanitize-html": "^2.7.0",
     "vue": "^2.6.14",
