--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/firebase": "^8.2.2",
     "core-js": "^3.19.3",
+    "firebase": "^9.9.0",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-icon-packs": "^1.1.3",
@@ -28,6 +30,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@nuxt/types": "^2.15.8",
     "@nuxt/typescript-build": "^2.1.0",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config-typescript": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/tailwindcss": "^5.1.3",
