--- a/package.json
+++ b/package.json
@@ -18,10 +18,18 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/firebase": "^8.2.2",
+    "@prisma/client": "4.0.0",
+    "@types/marked": "^4.0.3",
+    "@types/sanitize-html": "^2.6.2",
     "core-js": "^3.19.3",
+    "express": "^4.18.1",
+    "marked": "^4.0.18",
+    "@nuxtjs/firebase": "^8.2.2",
     "firebase": "^9.9.0",
     "nuxt": "^2.15.8",
+    "prisma": "^4.0.0",
+    "raw-loader": "^4.0.2",
+    "sanitize-html": "^2.7.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
