--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/firebase": "^8.2.2",
+    "@nuxtjs/toast": "^3.3.1",
     "@prisma/client": "4.0.0",
     "@types/marked": "^4.0.3",
     "@types/sanitize-html": "^2.6.2",
     "core-js": "^3.19.3",
     "express": "^4.18.1",
-    "marked": "^4.0.18",
-    "@nuxtjs/firebase": "^8.2.2",
     "firebase": "^9.9.0",
+    "marked": "^4.0.18",
     "nuxt": "^2.15.8",
     "prisma": "^4.0.0",
     "raw-loader": "^4.0.2",
