--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
     "types": [
       "@nuxt/types",
       "@nuxtjs/axios",
+      "@nuxtjs/toast",
       "@types/node",
       "@nuxtjs/firebase"
     ]
