Add prisma studio to package.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js",
     "lintfix": "yarn lint:js --fix",
+    "prisma": "prisma studio",
     "test": "jest"
   },
   "dependencies": {
