Cleanup - express lint issue and more

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js",
     "lintfix": "yarn lint:js --fix",
-    "test": "jest"
+    "test": "jest",
+    "prisma": "prisma studio"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
