--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "raw-loader": "^4.0.2",
     "sanitize-html": "^2.7.0",
     "vue": "^2.6.14",
+    "vue-multiselect": "^2.1.6",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
