--- a/app.yaml
+++ b/app.yaml
@@ -4,12 +4,12 @@ instance_class: F2
 
 handlers:
   - url: /_nuxt
-    static_dir: dist/_nuxt
+    static_dir: .nuxt/dist/client
     secure: always
 
   - url: /(.*\.(gif|png|jpg|ico|txt))$
-    static_files: static/\1
-    upload: static/.*\.(gif|png|jpg|ico|txt)$
+    static_files: .nuxt/dist/client/img\1
+    upload: .nuxt/dist/client/img/.*\.(gif|png|jpg|ico|txt)$
     secure: always
 
   - url: /.*
