--- a/app.yaml
+++ b/app.yaml
@@ -8,8 +8,8 @@ handlers:
     secure: always
 
   - url: /(.*\.(gif|png|jpg|ico|txt))$
-    static_files: .nuxt/dist/client/img\1
-    upload: .nuxt/dist/client/img/.*\.(gif|png|jpg|ico|txt)$
+    static_files: static/\1
+    upload: static/.*\.(gif|png|jpg|ico|txt)$
     secure: always
 
   - url: /.*
