--- a/app.yaml
+++ b/app.yaml
@@ -2,6 +2,10 @@ runtime: nodejs16
 
 instance_class: F2
 
+automatic_scaling:
+  min_instances: 1
+  max_instances: 3
+
 handlers:
   - url: /_nuxt
     static_dir: .nuxt/dist/client
