--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,10 @@ jobs:
       - name: Build 🛠
         run: yarn build
 
+      - uses: webfactory/ssh-agent@v0.7.0
+        with:
+            ssh-private-key: ${{ secrets.DIGITALOCEAN_SSH_KEY }}
+
       - name: Deploy 🚢
         env:
           SSH_KEY: ${{ secrets.DIGITALOCEAN_SSH_KEY }}
@@ -63,7 +67,7 @@ jobs:
           echo "Done creating file"
           chmod 400 sshkey
           echo "Done chmod"
-          scp -i sshkey -o StrictHostKeyChecking=no -r ../my-website/ root@138.197.130.254:~/
+          scp -o StrictHostKeyChecking=no -r ../my-website/ root@138.197.130.254:~/
           echo "Done scp"
-          ssh -i i sshkey -o StrictHostKeyChecking=no root@$IP_ADDRESS "sudo cp -r my-website /var/www/html; cd /var/www/html/my-website; pm2 reload MyWebsite"
+          ssh -o StrictHostKeyChecking=no root@$IP_ADDRESS "sudo cp -r my-website /var/www/html; cd /var/www/html/my-website; pm2 reload MyWebsite"
           echo "Done ssh"
