--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,21 +55,15 @@ jobs:
         run: yarn build
 
       - name: Deploy (Copy) 🚢
-        env:
-          SSH_KEY: ${{ secrets.DIGITALOCEAN_SSH_KEY }}
-          IP_ADDRESS: ${{ secrets.DIGITALOCEAN_IP }}
         uses: appleboy/scp-action@master
         with:
           host: 138.197.130.254
           username: root
-          key: ${{ secrets.DIGITALOCEAN_SSH_KEY }}
+          password: ${{ secrets.DIGITALOCEAN_PASSWORD }}
           source: "./"
           target: "~/my-website"
 
       - name: Deploy (Execute) 🚢
-        env:
-          SSH_KEY: ${{ secrets.DIGITALOCEAN_SSH_KEY }}
-          IP_ADDRESS: ${{ secrets.DIGITALOCEAN_IP }}
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: 138.197.130.254
