--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
           password: ${{ secrets.DIGITALOCEAN_PASSWORD }}
           script: |
             cd ~/my-website
-            yarn build
+            /root/.nvm/versions/node/v16.15.1/bin/yarn build
             sudo cp -r ~/my-website /var/www/html/
             cd /var/www/html/my-website
             /root/.nvm/versions/node/v16.15.1/bin/pm2 reload MyWebsite
