--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,11 +45,19 @@ jobs:
       - name: Install dependencies 👨🏻‍💻
         run: yarn
 
+      - name: Setup .env
+        env:
+          ENV_FILE: ${{ secrets.ENV_FILE }}
+        run: echo $ENV_FILE > .env
+
       - name: Run linter 👀
         run: yarn lint
 
       - name: Run tests 🧪
         run: yarn test
+
+      - name: Build 🛠
+        run: yarn build
 
       - name: Deploy (Copy) 🚢
         uses: appleboy/scp-action@master
@@ -67,8 +75,6 @@ jobs:
           username: root
           password: ${{ secrets.DIGITALOCEAN_PASSWORD }}
           script: |
-            cd ~/my-website
-            /root/.nvm/versions/node/v16.15.1/bin/yarn build
             sudo cp -r ~/my-website /var/www/html/
             cd /var/www/html/my-website
             /root/.nvm/versions/node/v16.15.1/bin/pm2 reload MyWebsite
