--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,7 +48,7 @@ jobs:
       - name: Setup .env
         env:
           ENV_FILE: ${{ secrets.ENV_FILE }}
-        run: echo $ENV_FILE > .env
+        run: echo "$ENV_FILE" > .env
 
       - name: Run linter 👀
         run: yarn lint
@@ -75,7 +75,7 @@ jobs:
           username: root
           password: ${{ secrets.DIGITALOCEAN_PASSWORD }}
           script: |
-            sudo cp -r ~/my-website /var/www/html/
+            sudo cp -r ~/my-website /var/www/html
             cd /var/www/html/my-website
             /root/.nvm/versions/node/v16.15.1/bin/pm2 reload MyWebsite
 
