--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,9 +57,11 @@ jobs:
         run: yarn test
 
       - name: Build 🛠
+        if: ${{ github.ref == 'refs/heads/main' }}
         run: yarn build
 
       - name: Deploy (Copy) 🚢
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: appleboy/scp-action@master
         with:
           host: 138.197.130.254
@@ -69,6 +71,7 @@ jobs:
           target: "~/my-website"
 
       - name: Deploy (Execute) 🚢
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: 138.197.130.254
