--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/marked": "^4.0.3",
     "@types/sanitize-html": "^2.6.2",
     "core-js": "^3.19.3",
+    "insights-js": "^1.2.11",
     "express": "^4.18.1",
     "firebase": "^9.9.0",
     "marked": "^4.0.18",
