--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "deploy": "nuxt build && gcloud app deploy app.yaml --project my-website-359001",
+    "deploy:google": "nuxt build && gcloud app deploy app.yaml --project my-website-359001",
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint": "yarn lint:js",
     "lintfix": "yarn lint:js --fix",
@@ -28,9 +28,9 @@
     "@types/marked": "^4.0.3",
     "@types/sanitize-html": "^2.6.2",
     "core-js": "^3.19.3",
-    "insights-js": "^1.2.11",
     "express": "^4.18.1",
     "firebase": "^9.9.0",
+    "insights-js": "^1.2.11",
     "marked": "^4.0.18",
     "nuxt": "^2.15.8",
     "prisma": "^4.0.0",
@@ -54,6 +54,7 @@
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
+    "cypress": "^12.2.0",
     "eslint": "^8.4.1",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
