--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -19,7 +19,8 @@ jobs:
         with:
           # Starts web server for E2E tests - replace with your own server invocation
           # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
-          start: yarn dev
+          build: yarn build
+          start: yarn e2e
           wait-on: 'http://localhost:3000' # Waits for above
           # Records to Cypress Dashboard 
           # https://docs.cypress.io/guides/dashboard/projects#Set-up-a-project-to-record
