--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest",
     "prisma": "prisma studio",
     "kill-nuxt": "kill -9 $(pgrep -f nuxt)",
+    "cy:open": "cypress open",
     "cy:run": "cypress run",
     "e2e": "start-server-and-test start http://localhost:3000 cy:run"
   },
