--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@types/marked": "^4.0.3",
     "@types/sanitize-html": "^2.6.2",
     "core-js": "^3.19.3",
-    "insights-js": "^1.2.11",
     "express": "^4.18.1",
     "firebase": "^9.9.0",
+    "insights-js": "^1.2.11",
     "marked": "^4.0.18",
     "nuxt": "^2.15.8",
     "prisma": "^4.0.0",
@@ -61,5 +61,8 @@
     "postcss": "^8.4.4",
     "ts-jest": "^27.1.1",
     "vue-jest": "^3.0.4"
+  },
+  "engines": {
+    "node": "16"
   }
 }
