--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prisma": "prisma studio",
     "kill-nuxt": "kill -9 $(pgrep -f nuxt)"
   },
-  "dependencies": {
+  "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -35,9 +35,7 @@
     "vue-multiselect": "^2.1.6",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
-  },
-  "devDependencies": {
+    "webpack": "^4.46.0",
     "@types/marked": "^4.0.3",
     "@types/sanitize-html": "^2.6.2",
     "@babel/eslint-parser": "^7.16.3",
