--- a/package.json
+++ b/package.json
@@ -1,63 +1,1 @@
-{
-  "name": "my-website",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate",
-    "deploy": "nuxt build && gcloud app deploy app.yaml --project my-website-359001",
-    "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
-    "lint": "yarn lint:js",
-    "lintfix": "yarn lint:js --fix",
-    "test": "jest",
-    "prisma": "prisma studio",
-    "kill-nuxt": "kill -9 $(pgrep -f nuxt)"
-  },
-  "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-brands-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/vue-fontawesome": "^2.0.8",
-    "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/firebase": "^8.2.2",
-    "@nuxtjs/tailwindcss": "^5.3.1",
-    "@nuxtjs/toast": "^3.3.1",
-    "core-js": "^3.19.3",
-    "firebase": "^9.9.0",
-    "insights-js": "^1.2.11",
-    "marked": "^4.0.18",
-    "nuxt": "^2.15.8",
-    "raw-loader": "^4.0.2",
-    "sanitize-html": "^2.7.0",
-    "vue": "^2.6.14",
-    "vue-multiselect": "^2.1.6",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0",
-    "@types/marked": "^4.0.3",
-    "@types/sanitize-html": "^2.6.2",
-    "@babel/eslint-parser": "^7.16.3",
-    "@babel/plugin-transform-modules-commonjs": "^7.18.6",
-    "@babel/preset-typescript": "^7.18.6",
-    "@nuxt/types": "^2.15.8",
-    "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/eslint-config-typescript": "^8.0.0",
-    "@nuxtjs/eslint-module": "^3.0.2",
-    "@vue/test-utils": "^1.3.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-jest": "^27.4.4",
-    "eslint": "^8.4.1",
-    "eslint-plugin-nuxt": "^3.1.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "jest": "^27.4.4",
-    "postcss": "^8.4.4",
-    "ts-jest": "^27.1.1",
-    "vue-jest": "^3.0.4"
-  },
-  "engines": {
-    "node": "16"
-  }
-}
+{"name":"my-website","version":"1.0.0","private":true,"scripts":{"dev":"nuxt","build":"nuxt build","start":"nuxt start","generate":"nuxt generate","deploy":"nuxt build && gcloud app deploy app.yaml --project my-website-359001","lint:js":"eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .","lint":"yarn lint:js","lintfix":"yarn lint:js --fix","test":"jest","prisma":"prisma studio","kill-nuxt":"kill -9 $(pgrep -f nuxt)"},"engines":{"node":"16"},"dependencies":{"@nuxt/core":"^2.15.8"}}
