--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prisma": "prisma studio",
     "kill-nuxt": "kill -9 $(pgrep -f nuxt)"
   },
-  "dependencies": {
+  "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
@@ -24,25 +24,20 @@
     "@nuxtjs/firebase": "^8.2.2",
     "@nuxtjs/tailwindcss": "^5.3.1",
     "@nuxtjs/toast": "^3.3.1",
-    "@prisma/client": "4.0.0",
-    "@types/marked": "^4.0.3",
-    "@types/sanitize-html": "^2.6.2",
     "core-js": "^3.19.3",
-    "express": "^4.18.1",
     "firebase": "^9.9.0",
     "insights-js": "^1.2.11",
     "marked": "^4.0.18",
     "nuxt": "^2.15.8",
-    "prisma": "^4.0.0",
     "raw-loader": "^4.0.2",
     "sanitize-html": "^2.7.0",
     "vue": "^2.6.14",
     "vue-multiselect": "^2.1.6",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
-  },
-  "devDependencies": {
+    "webpack": "^4.46.0",
+    "@types/marked": "^4.0.3",
+    "@types/sanitize-html": "^2.6.2",
     "@babel/eslint-parser": "^7.16.3",
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
